refactor: Rearrange Colab setup code for better readability and organization

--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -38,16 +38,28 @@
    },
    "outputs": [],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
     "\n",
     "import os\n",
-    "os.chdir('/content/drive/MyDrive/Smartech/MinaRumas')\n",
-    "\n",
     "import sys\n",
-    "sys.path.append('/content/drive/MyDrive/Smartech/MinaRumas')\n",
+    "import cv2\n",
+    "from glob import glob\n",
     "\n",
-    "!ls"
+    "is_colab = 'google.colab' in sys.modules\n",
+    "\n",
+    "if is_colab:\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/drive')\n",
+    "\n",
+    "    import os\n",
+    "    os.chdir('/content/drive/MyDrive/Smartech/MinaRumas')\n",
+    "\n",
+    "    import sys\n",
+    "    sys.path.append('/content/drive/MyDrive/Smartech/MinaRumas')\n",
+    "\n",
+    "    !ls\n",
+    "    !pip install -r requirements.txt\n",
+    "else:\n",
+    "    print(\"No está en Colab\")"
    ]
   },
   {
@@ -81,8 +93,6 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -r requirements.txt\n",
-    "\n",
     "import ultralytics\n",
     "ultralytics.checks()"
    ]
