--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -36,7 +36,15 @@
     "id": "dWMDZr2F7Hrd",
     "outputId": "eee55939-0514-448f-ba4a-0ccaab44eea7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No está en Colab\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import os\n",
@@ -73,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -91,7 +99,16 @@
     "id": "d0ku_ICCSdeZ",
     "outputId": "40467e11-c9a4-4fc2-8d00-6db00e249a0a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ultralytics 8.3.165  Python-3.10.11 torch-2.7.1+cpu CPU (11th Gen Intel Core(TM) i5-1135G7 2.40GHz)\n",
+      "Setup complete  (8 CPUs, 7.7 GB RAM, 66.5/89.5 GB disk)\n"
+     ]
+    }
+   ],
    "source": [
     "import ultralytics\n",
     "ultralytics.checks()"
@@ -105,8 +122,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alma:\n",
+    "- La metadata de las alertas tendra 4 campos mas: id, percent, coords, rad\n",
+    "- Para las alertas de movimiento en la zona y interaccion con ruma, los campos id, percent, coords y rad seran None\n",
+    "- Para la alerta de variacion de ruma si mandaras el id de la ruma, porcentaje, coordenadas y radio\n",
+    "- La creacion de cada ruma lo mandas como alerta, en este caso el alert_type seria Nueva ruma, en frame le mandas None y en id, percent (100), coords y rad lo que le corresponde\n",
+    "- Para mandar las coordenadas haras homografia ya que en el dashboard se va a poner el mapa en una vista desde arriba"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,25 +150,59 @@
     "from datetime import datetime\n",
     "from pathlib import Path\n",
     "from collections import defaultdict, deque\n",
-    "from ultralytics import YOLO\n",
-    "\n",
+    "from ultralytics import YOLO\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'RumaData' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Librerías propias\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpaths\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m generar_output_video\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlibs\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfig_loader\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_camera_config\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlibs\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmain_functions\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m process_video\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mmain\u001b[39m():\n",
+      "File \u001b[1;32md:\\git\\Project_MinaRumas\\libs\\__init__.py:5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;124;03mThis module initializes the library for video processing and configuration loading.\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmain_functions\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m process_video \n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfig_loader\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_camera_config\n\u001b[0;32m      8\u001b[0m __version__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1.0.0\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "File \u001b[1;32md:\\git\\Project_MinaRumas\\libs\\main_functions.py:3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mcv2\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmonitor\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mruma_monitor\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RumaMonitor \n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mprocess_video\u001b[39m(video_path, output_path, start_time_sec, end_time_sec,\n\u001b[0;32m      6\u001b[0m                   model_det_path, model_seg_path, detection_zone, camera_number, camera_sn, api_url):\n\u001b[0;32m      7\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;124;03m    Procesa un video completo usando el monitor de rumas.\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;124;03m        camera_sn (str): Número de serie de la cámara.\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n",
+      "File \u001b[1;32md:\\git\\Project_MinaRumas\\monitor\\ruma_monitor.py:13\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m#--------- import de la clase ruma data -------#\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgeometry\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m is_point_in_polygon, calculate_intersection\n\u001b[1;32m---> 13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01malerts\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01malert_manager\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m save_alert\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdraw\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m put_text_with_background, draw_zone_and_status\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmonitor\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mruma_tracker\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RumaTracker\n",
+      "File \u001b[1;32md:\\git\\Project_MinaRumas\\alerts\\alert_manager.py:2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01malerts\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01malert_sender\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m prepare_and_send_alert\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01malerts\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01malert_storage\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m save_alert_local, AlertContext, RumaDataExport\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Optional, Tuple, List\n",
+      "File \u001b[1;32md:\\git\\Project_MinaRumas\\alerts\\alert_storage.py:35\u001b[0m\n\u001b[0;32m     29\u001b[0m     frame_shape: Optional[Tuple[\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28mint\u001b[39m]] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     30\u001b[0m     detection_zone: Optional[List[Tuple[\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28mint\u001b[39m]]] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21msave_alert_local\u001b[39m(\n\u001b[0;32m     34\u001b[0m     alert_type: \u001b[38;5;28mstr\u001b[39m,\n\u001b[1;32m---> 35\u001b[0m     ruma_data: \u001b[43mRumaData\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m     36\u001b[0m     context: AlertContext \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m     37\u001b[0m ):\n\u001b[0;32m     38\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Guarda localmente una alerta con imagen y metadatos\"\"\"\u001b[39;00m\n\u001b[0;32m     39\u001b[0m     timestamp \u001b[38;5;241m=\u001b[39m datetime\u001b[38;5;241m.\u001b[39mnow()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'RumaData' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "# Librerías propias\n",
     "from utils.paths import generar_output_video\n",
     "from libs.config_loader import load_camera_config\n",
     "from libs.main_functions import process_video\n",
-    "\n",
     "def main():\n",
     "    start_time_sec = 0\n",
     "    end_time_sec = 12\n",
-    "    camera_number = 3\n",
+    "    camera_number = 1\n",
     "\n",
     "    try:\n",
-    "        input_video, _, polygons, camera_sn, _ = load_camera_config(\n",
+    "        input_video, _, polygons, camera_sn, _ , transformer= load_camera_config(\n",
     "            camera_number, config_path=\"mkdocs.yml\"\n",
     "        )\n",
     "        output_video = generar_output_video(input_video)\n",
     "        print(f\"Procesando video: {input_video}\")\n",
     "        print(f\"Salida: {output_video}\")\n",
+    "         # Círculo original\n",
+    "        centroide = (1000, 500)\n",
+    "        radio_original = 50\n",
+    "\n",
+    "        centro_transformado, radio_transformado = transformer.transform_circle(centroide, radio_original)\n",
+    "\n",
+    "        print(f\"[INFO] Centro original: {centroide}\")\n",
+    "        print(f\"[INFO] Centro transformado: {centro_transformado}\")\n",
+    "        print(f\"[INFO] Radio original: {radio_original}\")\n",
+    "        print(f\"[INFO] Radio transformado: {radio_transformado}\")\n",
+    "\n",
     "    except ValueError as e:\n",
     "        print(f\"[Error] {e}\")\n",
     "        return\n",
