Update rumas new and test ok

--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -134,7 +134,7 @@
     "    camera_number = 1\n",
     "\n",
     "    try:\n",
-    "        input_video, _, polygons, camera_sn, _, _ = load_camera_config(\n",
+    "        input_video, _, polygons, camera_sn, _, transformer = load_camera_config(\n",
     "            camera_number, config_path=\"mkdocs.yml\"\n",
     "        )\n",
     "        output_video = generar_output_video(input_video)\n",
@@ -159,7 +159,8 @@
     "        detection_zone=polygons,\n",
     "        camera_number=camera_number,\n",
     "        camera_sn=camera_sn,\n",
-    "        api_url=api_url  # URL de la API\n",
+    "        api_url=api_url,\n",
+    "        transformer =transformer  # URL de la API\n",
     "    )\n",
     "\n",
     "    print(\"\\n=== Procesamiento finalizado correctamente ===\")\n",
