Update whitout error's

--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -121,19 +121,13 @@
     "from datetime import datetime\n",
     "from pathlib import Path\n",
     "from collections import defaultdict, deque\n",
-    "from ultralytics import YOLO\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from ultralytics import YOLO\n",
+    "\n",
     "# Librerías propias\n",
     "from utils.paths import generar_output_video\n",
     "from libs.config_loader import load_camera_config\n",
     "from libs.main_functions import process_video\n",
+    "\n",
     "def main():\n",
     "    start_time_sec = 0\n",
     "    end_time_sec = 12\n",
@@ -146,18 +140,6 @@
     "        output_video = generar_output_video(input_video)\n",
     "        print(f\"Procesando video: {input_video}\")\n",
     "        print(f\"Salida: {output_video}\")\n",
-    "         # Círculo original\n",
-    "        centroide = (1000, 500)\n",
-    "        radio_original = 50\n",
-    "        \"\"\"\n",
-    "        centro_transformado, radio_transformado = transformer.transform_circle(centroide, radio_original)\n",
-    "\n",
-    "        print(f\"[INFO] Centro original: {centroide}\")\n",
-    "        print(f\"[INFO] Centro transformado: {centro_transformado}\")\n",
-    "        print(f\"[INFO] Radio original: {radio_original}\")\n",
-    "        print(f\"[INFO] Radio transformado: {radio_transformado}\")\n",
-    "        \"\"\"\n",
-    "\n",
     "    except ValueError as e:\n",
     "        print(f\"[Error] {e}\")\n",
     "        return\n",
