Refactor send and save in self Ruma

--- a/Process_Video.ipynb
+++ b/Process_Video.ipynb
@@ -138,8 +138,8 @@
     "            camera_number, config_path=\"mkdocs.yml\"\n",
     "        )\n",
     "        output_video = generar_output_video(input_video)\n",
-    "        print(f\"Procesando video: {input_video}\")\n",
-    "        print(f\"Salida: {output_video}\")\n",
+    "        #print(f\"Procesando video: {input_video}\")\n",
+    "        #print(f\"Salida: {output_video}\")\n",
     "    except ValueError as e:\n",
     "        print(f\"[Error] {e}\")\n",
     "        return\n",
