--- a/ref/extract_frame/extract_frames.ipynb
+++ b/ref/extract_frame/extract_frames.ipynb
@@ -154,7 +154,7 @@
       "outputs": [],
       "source": [
         "output_folder = \"data\"\n",
-        "parent_folder = \".\"  # Carpeta padre con videos y subcarpetas\n",
+        "parent_folder = \"../../\"  # Carpeta padre con videos y subcarpetas\n",
         "# output_folder = os.path.join(data_folder, parent_folder)\n",
         "process_all_videos(parent_folder, output_folder, fps=1)"
       ]
@@ -179,7 +179,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.3"
+      "version": "3.10.11"
     }
   },
   "nbformat": 4,
